--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 	margin:0;
 	padding:0;
 	width:100%;
-	color:#CF9;
+	color:rgb(37, 8, 83);
 	font:normal 12px/1.5em "Liberation sans", Arial, Helvetica, sans-serif;
 	background:#FFF url(../images/main_bg.gif) repeat-x left top;
 }
